--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,12 +1,793 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
 body {
-  background: red;
+  margin: 0;
 }
-
-.testing {
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted; /* 2 */
+}
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+sub {
+  bottom: -0.25em;
+}
+sup {
+  top: -0.5em;
+}
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input { /* 1 */
+  overflow: visible;
+}
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select { /* 1 */
+  text-transform: none;
+}
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type="checkbox"],
+[type="radio"] {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+* ::after,
+* ::before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Open Sans", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  background: #25272E;
+  color: #fff;
+}
+img {
+  max-width: 100%;
+}
+#wrapper {
+  max-width: 1407px;
   width: 100%;
+  margin: 0 auto;
 }
-
-.container {
-  width: 200px;
-  font-style: 13px;
+.title {
+  font-weight: 700;
+  color: #FFFFFE;
+  padding: 0;
+}
+.subtitle {
+  font-size: 20px;
+  line-height: 32px;
+  color: #A7A9BE;
+}
+.btn {
+  cursor: pointer;
+  padding: 22px 44px;
+  outline: none;
+  border: 0;
+  border-radius: 50px;
+  -webkit-transition: -webkit-box-shadow 0.3s ease-in-out;
+  transition: -webkit-box-shadow 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+}
+.btn-grey {
+  color: #FCC232;
+  background: #3C3F4A;
+  -webkit-box-shadow: 0px 15px 50px rgba(171, 172, 175, 0.1);
+  box-shadow: 0px 15px 50px rgba(171, 172, 175, 0.1);
+}
+.btn_yellow {
+  background: #FCC232;
+  -webkit-box-shadow: 0px 15px 50px rgba(215, 153, 0, 0.15);
+  box-shadow: 0px 15px 50px rgba(215, 153, 0, 0.15);
+}
+.btn_black {
+  color: #fff;
+  background: #25272E;
+  -webkit-box-shadow: 0px 15px 50px rgba(171, 172, 175, 0.1);
+  box-shadow: 0px 15px 50px rgba(171, 172, 175, 0.1);
+}
+.btn:hover {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+/* Main styles */
+.header {
+  margin-top: 68px;
+  margin-bottom: 70px;
+}
+.header_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.header_left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.header-nav {
+  margin-left: 148px;
+}
+.header-nav_item {
+  color: #DFDDDD;
+  text-decoration: none;
+  -webkit-transition: color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
+}
+.header-nav_item:not(:last-child) {
+  margin-right: 60px;
+}
+.header-nav_item:hover {
+  color: #FCC232;
+}
+.header_login {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.header_login_item {
+  margin-right: 20px;
+  color: #DFDDDD;
+  text-decoration: none;
+  -webkit-transition: color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
+}
+.header_login_item:hover {
+  color: #FCC232;
+}
+.header_login_market {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 25px;
+  height: 25px;
+  position: relative;
+  cursor: pointer;
+  background: #FCC232;
+  border-radius: 2.89855px;
+}
+.header_login_market .counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: absolute;
+  top: -3px;
+  right: -4px;
+  width: 8px;
+  height: 8px;
+  font-weight: 500;
+  font-size: 3.65217px;
+  line-height: 2px;
+  color: #25272E;
+  background-color: #fff;
+  border-radius: 50%;
+}
+.logo {
+  max-height: 38px;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 41px;
+  cursor: pointer;
+  color: #fff;
+}
+.logo_hub {
+  color: #FCC232;
+  font-weight: 700;
+}
+.bg-item {
+  position: absolute;
+  z-index: -9999;
+}
+.bg-item_right {
+  top: 0;
+  right: 0;
+}
+.bg-item_left_bottom {
+  max-width: 322px;
+  bottom: -45px;
+  left: 0;
+}
+.welcome {
+  position: relative;
+  margin-bottom: 160px;
+}
+.welcome_columns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.welcome_title {
+  max-width: 632px;
+  font-size: 90px;
+  line-height: 104px;
+  margin: 0;
+  margin-bottom: 30px;
+}
+.welcome_small-title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 15px;
+  color: #FD7E41;
+  margin-bottom: 30px;
+}
+.welcome_subtitle {
+  max-width: 566px;
+  margin-bottom: 50px;
+}
+.category {
+  margin-bottom: 160px;
+}
+.category_items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.category_item {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  max-width: 378px;
+  width: 100%;
+  height: 216px;
+  cursor: pointer;
+  background: #3C3F4A;
+  border-radius: 30px;
+}
+.category_item_image {
+  position: absolute;
+  top: -55px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 148px;
+  height: 148px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+.category_item_title {
+  margin-top: 80px;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 46px;
+  color: #FFFFFE;
+}
+.category_item:not(:last-child) {
+  margin-right: 87px;
+}
+.about-us {
+  position: relative;
+  margin-bottom: 160px;
+}
+.about-us_columns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.about-us_title {
+  max-width: 692px;
+  font-weight: 700;
+  font-size: 58px;
+  line-height: 68px;
+  color: #FFFFFE;
+  margin-bottom: 30px;
+}
+.about-us_subtitle {
+  max-width: 692px;
+  margin-bottom: 50px;
+}
+.about-us .bg-item_right {
+  top: 70px;
+}
+.food {
+  position: relative;
+  margin-bottom: 160px;
+}
+.food_title {
+  max-width: 543px;
+  font-weight: bold;
+  font-size: 58px;
+  line-height: 68px;
+  color: #FFFFFE;
+  margin-bottom: 162px;
+}
+.food_blocks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 90px;
+}
+.food_block {
+  position: relative;
+  max-width: 415px;
+  width: 100%;
+  max-height: 315px;
+  height: 100%;
+  text-align: center;
+  padding: 30px 30px 54px;
+  border-radius: 30px;
+  background-color: #3C3F4A;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.food_block_active {
+  background-color: #DFDDDD;
+}
+.food_block_active .food_block_items_text,
+.food_block_active .subtitle {
+  color: #46474A;
+}
+.food_block_active .title {
+  color: #25272E;
+}
+.food_block_header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  margin-bottom: 51px;
+}
+.food_block_image {
+  position: absolute;
+  top: -165px;
+  left: -125px;
+  -webkit-filter: drop-shadow(0px 8px 80px rgba(37, 39, 46, 0.25));
+  filter: drop-shadow(0px 8px 80px rgba(37, 39, 46, 0.25));
+}
+.food_block_items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin-right: 20px;
+}
+.food_block_items_text {
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFE;
+}
+.food_block_stars {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  margin-bottom: 12.5px;
+}
+.food_block_title {
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 20px;
+  margin-bottom: 30px;
+}
+.food_block_subtitle {
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  color: #FFFFFE;
+}
+.food_block_star {
+  display: block;
+  width: 16.5px;
+  height: 16.5px;
+  background-image: url(../images/star.svg);
+  background-repeat: no-repeat;
+}
+.food_counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.food_count {
+  display: block;
+  width: 20px;
+  height: 20px;
+  cursor: progress;
+  background-color: #3C3F4A;
+  border-radius: 50%;
+}
+.food_count_active {
+  background-color: #FCC232;
+}
+.food_count:not(:last-child) {
+  margin-right: 21px;
+}
+.food .bg-item_left_bottom {
+  bottom: -178px;
+}
+.discount {
+  position: relative;
+  margin-bottom: 160px;
+}
+.discount_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding: 110px 145px;
+  background-color: #FCC232;
+  text-align: center;
+}
+.discount_title {
+  font-weight: 700;
+  font-size: 58px;
+  line-height: 20px;
+  color: #25272E;
+  margin-bottom: 60px;
+  z-index: 3;
+}
+.discount_title_active {
+  color: #fff;
+}
+.discount_subtitle {
+  max-width: 957px;
+  color: #25272E;
+  font-size: 20px;
+  line-height: 32px;
+  margin-bottom: 50px;
+  z-index: 3;
+}
+.discount .btn_black {
+  margin-right: 30px;
+}
+.discount_bg {
+  position: absolute;
+}
+.discount_bg_top {
+  top: -115px;
+  right: 237px;
+  z-index: 2;
+}
+.discount_bg_bottom {
+  bottom: 0;
+  left: 147px;
+  z-index: 2;
 }
