--- a/app/css/style.css
+++ b/app/css/style.css
@@ -325,6 +325,25 @@ img {
   transition: box-shadow 0.3s ease-in-out;
   transition: box-shadow 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
 }
+.btn-cash {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 43px;
+  height: 47px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 9px;
+  background-color: #46474A;
+  border-radius: 4.70588px;
+}
 .btn-grey {
   color: #FCC232;
   background: #3C3F4A;
@@ -345,6 +364,17 @@ img {
 .btn:hover {
   -webkit-box-shadow: none;
   box-shadow: none;
+}
+.logo {
+  max-height: 38px;
+  font-weight: 400;
+  font-size: 30px;
+  cursor: pointer;
+  color: #fff;
+}
+.logo_hub {
+  color: #FCC232;
+  font-weight: 700;
 }
 /* Main styles */
 .header {
@@ -441,18 +471,6 @@ img {
   color: #25272E;
   background-color: #fff;
   border-radius: 50%;
-}
-.logo {
-  max-height: 38px;
-  font-weight: 400;
-  font-size: 30px;
-  line-height: 41px;
-  cursor: pointer;
-  color: #fff;
-}
-.logo_hub {
-  color: #FCC232;
-  font-weight: 700;
 }
 .bg-item {
   position: absolute;
@@ -790,4 +808,438 @@ img {
   bottom: 0;
   left: 147px;
   z-index: 2;
+}
+.popular {
+  margin-bottom: 160px;
+}
+.popular_title {
+  font-weight: 700;
+  font-size: 58px;
+  line-height: 32px;
+  color: #FFFFFE;
+  margin-bottom: 60px;
+  text-align: center;
+}
+.popular_nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-bottom: 256px;
+}
+.popular_item {
+  font-weight: 400;
+  color: #A7A9BE;
+  text-decoration: none;
+}
+.popular_item__active {
+  color: #FCC232;
+  border-bottom: 1px solid #FCC232;
+}
+.popular_item:not(:last-child) {
+  margin-right: 80px;
+}
+.popular_blocks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 74px;
+}
+.popular_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  max-width: 442px;
+  height: 468px;
+  width: 100%;
+  background: #3C3F4A;
+  border-radius: 30px;
+  padding: 0 30px 50px;
+  -webkit-transition: all 0.45s ease-in-out;
+  transition: all 0.45s ease-in-out;
+}
+.popular_block__active {
+  margin-top: -47px;
+  border-bottom: 4px solid #FD7E41;
+}
+.popular_block__active .popular_price {
+  top: -20px;
+}
+.popular_block_header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: relative;
+  margin-top: -108px;
+  margin-bottom: 50px;
+}
+.popular_block:hover {
+  margin-top: -47px;
+  border-bottom: 4px solid #FD7E41;
+}
+.popular_block:hover .popular_price {
+  top: -20px;
+}
+.popular_price {
+  position: absolute;
+  top: -40px;
+  left: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 131px;
+  height: 131px;
+  font-weight: 700;
+  font-size: 28px;
+  color: #25272E;
+  background-color: #FCC232;
+  border-radius: 50%;
+  -webkit-transition: all 0.44s ease-in-out;
+  transition: all 0.44s ease-in-out;
+}
+.popular_image {
+  width: 315px;
+  height: 317px;
+}
+.popular_name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.popular_name_title {
+  max-width: 221px;
+  font-weight: 600;
+  font-size: 34px;
+  line-height: 42px;
+  color: #FFFFFE;
+}
+.popular_buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.popular_count {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 43px;
+  height: 47px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 9px;
+  color: #231F20;
+  background-color: #FD7E41;
+}
+.popular_down {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.popular_time {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 16px;
+  line-height: 15px;
+  color: #A7A9BE;
+}
+.popular-icon {
+  display: block;
+  width: 22px;
+  height: 22px;
+  background-image: url(../images/time-ico.svg);
+  background-repeat: no-repeat;
+  margin-right: 15px;
+}
+.popular_peoples {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.popular_avatar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 40px;
+  height: 40px;
+  margin-right: -20px;
+}
+.popular_more {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  color: #25272E;
+  background-color: #fff;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+.download {
+  position: relative;
+  margin-bottom: 160px;
+}
+.download_block {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  width: 100%;
+  padding-top: 50px;
+  background-color: #3C3F4A;
+}
+.download_col-1 {
+  padding-left: 65px;
+  margin-bottom: 100px;
+}
+.download_image {
+  margin-bottom: -4px;
+}
+.download_title {
+  max-width: 610px;
+  font-weight: 700;
+  font-size: 58px;
+  line-height: 68px;
+  color: #FFFFFE;
+  margin-bottom: 60px;
+}
+.download_bg {
+  position: absolute;
+  top: -160px;
+  right: -180px;
+}
+.download .bg-item_left_bottom {
+  bottom: -80px;
+}
+.visa-icon {
+  display: block;
+  width: 28px;
+  height: 19.31px;
+  background-image: url(../images/visa.png);
+  background-repeat: no-repeat;
+}
+.mc-icon {
+  display: block;
+  width: 31.67px;
+  height: 19px;
+  background-image: url(../images/mastercard.png);
+  background-repeat: no-repeat;
+}
+.paypal-icon {
+  display: block;
+  width: 35.65px;
+  height: 9.62px;
+  background-image: url(../images/paypal.png);
+  background-repeat: no-repeat;
+}
+.ae-icon {
+  display: block;
+  width: 27.55px;
+  height: 19px;
+  background-image: url(../images/americanexpress.png);
+  background-repeat: no-repeat;
+}
+.footer {
+  position: relative;
+  margin-bottom: 84px;
+}
+.footer_cols {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.footer_col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.footer .logo {
+  margin-bottom: 30px;
+}
+.footer_subtitle {
+  max-width: 435px;
+  font-size: 20px;
+  line-height: 32px;
+  color: #A7A9BE;
+  margin-bottom: 45px;
+}
+.footer_social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.footer_social_link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  margin-right: 20px;
+  background-color: #3C3F4A;
+  border-radius: 50%;
+}
+.footer_social_link__active {
+  background-color: #FCC232;
+}
+.footer_links-title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 15px;
+  color: #FFFFFE;
+  margin-bottom: 38px;
+}
+.footer_link {
+  font-size: 20px;
+  line-height: 40px;
+  color: #A7A9BE;
+  text-decoration: none;
+}
+.footer_email {
+  margin-bottom: 30px;
+}
+.footer_email-title, .footer_payment-title {
+  font-size: 20px;
+  line-height: 15px;
+  color: #A7A9BE;
+  margin-bottom: 20px;
+}
+.footer_email_send {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.footer_input {
+  height: 33px;
+  font-size: 8px;
+  line-height: 10px;
+  color: #888888;
+  border: 0;
+  outline: none;
+  padding: 11px 12px;
+  background: #3C3F4A;
+  border-radius: 5px 0px 0px 5px;
+}
+.footer_email_btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 35px;
+  height: 33px;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+  background-color: #FCC232;
+  border-radius: 0px 5px 5px 0px;
+}
+.footer_payment_icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: start;
+}
+.footer_payment_icon {
+  margin-right: 14px;
+}
+.footer_bg {
+  top: -80px;
+  right: 0;
 }
