--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -314,6 +314,17 @@
     .welcome_column img {
         margin-bottom: 50px;
     }
+
+    .download_col-1 {
+        padding-left: 30px;
+        padding-right: 30px;
+        align-items: center;
+    }
+
+    .download_title {
+        font-size: 28px;
+        max-width: 100%;
+    }
 }
 
 @media (max-width: 450px) {
