--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -322,21 +322,40 @@
     }
 
     .popular_block:not(:last-child) {
-        margin-right: 0;
+        margin-right: 0px;
     }
 
     .download_title {
         font-size: 28px;
         max-width: 100%;
     }
-}
-
-@media (max-width: 450px) {
 
     .food_block {
         width: 100%;
-
+        padding: 20px 20px;
     }
+
+    .food_block_title {
+        font-size: 21px;
+    }
+
+    .food_block_items {
+        margin-right: 0;
+    }
+
+    .food_block_image {
+        width: 220px;
+        top: -70px;
+        left: -50px;
+    }
+
+    .footer_subtitle {
+        max-width: auto;
+        width: 100%;
+    }
+}
+
+@media (max-width: 450px) {
 
     .header_left {
         width: 100%;
